# KNApSAcK_NP_search

./: KNApSAcK_GUI.py  KNApSAcK_script.py  LICENSE  README.md  pyproject.toml
knapsack_np/: __init__.py  knapsack.py  utils.py
