[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KNApSAcK_NP_search"
version = "0.1.0"
description = "Simple tool for web scrapping of the KNApSAcK website"
authors = [
  { name = "Dr. Freddy Bernal" },
]
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
  "requests",
  "beautifulsoup4",
  "pandas",
  "tqdm"
]

[project.urls]
Repository = "https://github.com/BernalFA/KNApSAcK_NP_search"

[tool.setuptools]
packages = ["knapsack_np"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["knapsack_np"]
force_sort_within_sections = true